fixed spacing and images

--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Serif|Oxygen');
 
 body, html {
-    height: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
 
 ul {
@@ -63,6 +64,8 @@ li a {
 
 #congress {
     z-index: -1;
+    overflow-y: hidden;
+    height: 675px;
 
 }
 
@@ -338,7 +341,7 @@ li a {
     position: absolute;
     top: 1320px;
     height: 49%;
-
+    /*width: 46%;*/
 
 }
 
@@ -355,15 +358,16 @@ li a {
 
     position: absolute;
     top: 1320px;
-    right: 430px;
+    right: 476.5px;
     height: 49%;
+    /*width: 26%;*/
 
 }
 
 #four {
 
     position: absolute;
-    top: 1670px;
+    top: 1700px;
     height: 49%;
 
 }
@@ -371,18 +375,18 @@ li a {
 #five {
 
     position: absolute;
-    top: 1670px;
+    top: 1700px;
     height: 49%;
-    right: 510px;
+    right: 500px;
 
 }
 
 #six {
 
     position: absolute;
-    top: 1670px;
+    top: 1700px;
     height: 49%;
-    right: 20px;
+    right: 10px;
 
 
 
